Found missing jQuery reference
Your mama

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <p>Put footer text here.  Like copyright info and such</p>
     </div>
 
-
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script>
 
     	jQuery(document).ready(function($) {
